--- a/Experiments/cat-assign/webapp/index.html
+++ b/Experiments/cat-assign/webapp/index.html
@@ -24,8 +24,8 @@
 	<script src="js/utils.js"></script>
 	<script src="js/server.js"></script>
 	<script src="js/stimuli.js"></script>
-	<script src="js/observation.js"></script>
-	<!--<script src="js/generation.js"></script>
+	<!--<script src="js/observation.js"></script>
+	<script src="js/generation.js"></script>
 	<script src="js/generalization.js"></script>-->
 	<script src="js/assignment.js"></script>
 
