--- a/Experiments/middle-bottomABC/webapp/html/instructions/generalize.html
+++ b/Experiments/middle-bottomABC/webapp/html/instructions/generalize.html
@@ -2,7 +2,7 @@
 
 <p>
 In this part of the experiment, you will observe more geometric figures.&nbsp;&nbsp;
-Examples will appear one at a time, and your job is to decide whether each example belongs to the Alpha or Beta category.&nbsp;&nbsp;
+Examples will appear one at a time, and your job is to decide whether each example belongs to the Alpha, Beta, or Gamma category.&nbsp;&nbsp;
 You will not receive feedback on your responses.
 </p>
 
