--- a/Experiments/middle-bottomABC/webapp/html/instructions/generate.html
+++ b/Experiments/middle-bottomABC/webapp/html/instructions/generate.html
@@ -1,14 +1,14 @@
 <div id='instructions'>
 
 <p>
-As it turns out, there is another category of geometric figures called "Beta".&nbsp;&nbsp;
-Instead of showing you examples of the Beta category, we would like to know what you think is likely to be in the Beta category. 
+As it turns out, there is another category of geometric figures called "<span class='category'></span>".&nbsp;&nbsp;
+Instead of showing you examples of the <span class='category'></span> category, we would like to know what you think is likely to be in the <span class='category'></span> category. 
 </p>
 
 <p>
-You will now be given the chance to create examples of any size or color in order to show what you expect about the Beta category.&nbsp;&nbsp;
-You will be asked to produce <span id='ntrials'></span> Beta examples - they can be quite similar or quite different to each other, depending on what you think makes the most sense for the category.&nbsp;&nbsp;
-Each example needs to be unique, but the computer will let you know if you accidentally create a repeat.
+  You will now be given the chance to create examples of any size or color in order to show what you expect about the <span class='category'></span> category.&nbsp;&nbsp;
+  You will be asked to produce <span id='ntrials'></span> <span id=category'></span> examples - they can be quite similar or quite different to each other, depending on what you think makes the most sense for the category.&nbsp;&nbsp;
+  Each example needs to be unique, but the computer will let you know if you accidentally create a repeat.
 </p>
 
 <a href='#' onclick='generate()'>Continue.</a>
@@ -16,5 +16,15 @@ Each example needs to be unique, but the computer will let you know if you accid
 </div>
 
 <script type="text/javascript">
-	document.getElementById('ntrials').innerHTML = generation.ntrials;
+  //get category type
+  if (session.condition=='bc'){
+  generation.ntrials = generation.ntrialsbase
+  } else {
+  generation.ntrials = generation.ntrialsbase*2
+  }
+  document.getElementById('ntrials').innerHTML = generation.ntrials;
+  var cats = document.getElementsByClassName('category')
+  for (var i = 0; i < cats.length; ++i) {
+  cats[i].innerHTML = generation.bcnames[generation.countbc];
+  }
 </script>
